# sftp-pam

./: README.md
src/: CMakeLists.txt  do_pam_auth.sh  pam_conf_sshd  sftp-pam-auth.c
src/cmake/modules/: FindPAM.cmake
